--- a/index.html
+++ b/index.html
@@ -14,43 +14,45 @@
 <br/>
 
 <ul class="honeycomb">
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'zeusProfile.html' ">
         <img class="honeycomb-cell_img" src="img/Greek_Aquila.jpg">
         <div class="honeycomb-cell_title">Zeus</div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'egyptianProfile.html' ">
         <img class="honeycomb-cell_img" src="img/Egyptian_Noctua.jpg">
         <div class="honeycomb-cell_title">Amun-Ra</div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'mayanProfile.html' ">
         <img class="honeycomb-cell_img" src="img/Mayan_Ursa.jpg">
         <div class="honeycomb-cell_title">Itzamna</div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'romanProfile.html' ">
         <img class="honeycomb-cell_img" src="img/Roman_Leo.jpg">
         <div class="honeycomb-cell_title">Jupiter</div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'norseProfile.html' ">
         <img class="honeycomb-cell_img" src="img/Norse_Draco.jpg">
         <div class="honeycomb-cell_title">Odin</div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'ascensionProfile.html' ">
         <img class="honeycomb-cell_img" src="img/work-6.jpg">
-        <div class="honeycomb-cell_title">Uchiha<small>Itachi</small></div>
+        <div class="honeycomb-cell_title">ASCENSION<small>RC4 Freshmen Orientation Camp</small></div>
     </li>
-    <li class="honeycomb-cell">
+    <li class="honeycomb-cell" onclick="location.href = 'mainQuest.html' ">
         <img class="honeycomb-cell_img" src="img/work-7.jpg">
-        <div class="honeycomb-cell_title">Tokyo Ghoul<small>Ken Kaneki</small></div>
+        <div class="honeycomb-cell_title">Main Quest<small>Live Updates</small></div>
     </li>
     <li class="honeycomb-cell honeycomb_Hidden">
     </li>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
+
 
 <script>
   // Your web app's Firebase configuration
@@ -67,7 +69,26 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+
+  var db = firebase.firestore();
+
+    // for (let i = 1; i <= 30; i++) {
+    // console.log("gasdhj")
+    // db.collection("grid-owners").doc("grid-" + i).set({
+    //     'grid-colour': ""
+    // })
+    // .then(() => {
+    //     console.log("Document successfully written!");
+    // })
+    // .catch((error) => {
+    //     console.error("Error writing document: ", error);
+    // });
+    // }
 </script>
+
+<script src="js/index.js" type='text/javascript'></script>
+
+
 
 </body>
 </html>
